# wind_map

./: .gitignore  AGENTS.md  Makefile  PRD.md  README.md  status.md
backend/: .gitignore  pyproject.toml
backend/src/wind_track/: __init__.py  cli.py  main.py
backend/src/wind_track/api/: routes.py
backend/src/wind_track/config/: settings.py
backend/src/wind_track/db/: connection.py  migrate.py  schema.sql
backend/src/wind_track/models/: schemas.py
backend/src/wind_track/services/: areas.py  bdtopo_heights.py  db_retry.py  directional_cache.py  enrich_heights.py  flow_indicators.py  geo.py  import_osm.py  osm_normalize.py  overpass_fetch.py  pipeline.py  precompute.py  priority_zones.py  progress.py  quality_audit.py  quay_detect.py  scenarios.py  seed.py  vector_export.py
backend/src/wind_track/services/flow_paths/: __init__.py  build.py  geometry.py  normalize.py  query.py  simulate.py
backend/src/wind_track/services/metrics/: batch.py  compute.py
backend/src/wind_track/services/scoring/: config.py  gust.py  scalar.py  special_rules.py
backend/src/wind_track/services/terrain/: __init__.py  apply.py  dem.py  score.py
backend/src/wind_track/services/tiles/: __init__.py  generate.py
backend/src/wind_track/services/validation/: __init__.py  baselines.py  (+3 more)
backend/tests/: conftest.py  test_api.py  test_bdtopo_heights.py  test_directional_cache.py  test_enrich_heights.py  test_flow_indicators.py  test_flow_paths.py  test_golden.py  test_gust.py  test_import_osm.py  test_osm_normalize.py  test_overpass_fetch.py  test_priority_zones.py  test_progress.py  test_quality_audit.py  test_quay_detect.py  test_scoring.py  test_terrain.py  test_tiles.py  test_validation.py  test_weather.py
(+28 files in other folders)
